# AlphaMeow_control

./: .gitignore  LICENSE  README.md
src/applications/sample/wifi-iot/app/: BUILD.gn
src/applications/sample/wifi-iot/app/balance_car/: BUILD.gn  controller.py  main.c
src/applications/sample/wifi-iot/app/balance_car/bno055/: bno055.c  bno055.h
src/applications/sample/wifi-iot/app/balance_car/encoder/: encoder.c  encoder.h
src/applications/sample/wifi-iot/app/balance_car/motor/: motor.c  motor.h
src/applications/sample/wifi-iot/app/balance_car/mpu6050/: mpu6050.c  mpu6050.h
src/applications/sample/wifi-iot/app/balance_car/pid/: pid.c  pid.h
src/applications/sample/wifi-iot/app/balance_car/test/: test.c  test.h
src/applications/sample/wifi-iot/app/balance_car/wifi/: wifi_connect.c  wifi_connect.h
src/applications/sample/wifi-iot/app/chessrobot/: BUILD.gn  debug.c  main.c  oled_ssd1306.c  pca9685.c  pca9685.h  pwm.c  pwm.h  ssd1306_fonts.c  ssd1306_fonts.h
src/applications/sample/wifi-iot/app/encoder/: encoder.c
src/applications/sample/wifi-iot/app/pca9685/: BUILD.gn  ascii_char.h  entry.c  hx1838.c  hx1838.h  pca9685.c  pca9685.h  sh1106.c  sh1106.h
