#
#  @Author        陈佳辉 1946847867@qq.com
#  @Date          2023-08-05 17:22:59
#  @LastEditTime  2023-08-05 17:31:42
#  @Description   
# 

static_library("balance_car") {
    sources = [
        "//vendor/bearpi/bearpi_hm_nano/common/iot_hardware_hals/src/hal_iot_adc.c",
        "//vendor/bearpi/bearpi_hm_nano/common/iot_hardware_hals/src/hal_iot_gpio_ex.c",
        "//vendor/bearpi/bearpi_hm_nano/common/iot_hardware_hals/src/hal_iot_i2c_ex.c",
        "main.c",
        "wifi/wifi_connect.c",
        "bno055/bno055.c",
        # "mpu6050/mpu6050.c",
        "encoder/encoder.c",
        "motor/motor.c",
        "pid/pid.c",
        "test/test.c"
    ]
    cflags = [ "-Wno-unused-variable" ]
    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/kal/cmsis",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "//vendor/bearpi/bearpi_hm_nano/common/iot_hardware_hals/include",
        "//device/soc/hisilicon/hi3861v100/sdk_liteos/include",
        "//foundation/communication/wifi/interfaces/innerkits/native_c",
        "//foundation/communication/wifi_lite/interfaces/wifiservice",
        "//utils/native/lite/include",
        "wifi",
        "bno055",
        # "mpu6050",
        "encoder",
        "motor",
        "pid",
        "test"
    ]
}
