

static_library("pca9685_t5") {

    sources = [
        "entry.c",
        "pca9685.c", 
        "hx1838.c",
        "sh1106.c",
    ]

    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/kal/cmsis",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "//device/hisilicon/hispark_pegasus/sdk_liteos/include",
    ]

}